--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 header {
     background-color: #BBBBBB;
     padding: 20px 0;
@@ -156,7 +159,7 @@ td,th{
 
 .titulo-principal{
     text-align: center;
-    font-size: 2 em;
+    font-size: 2em;
     margin: 0 0 1em;
     clear: left;
 }
@@ -176,6 +179,13 @@ td,th{
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
+}
+.mapa{
+    padding: 3em 0;
+}
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
 }
 .imagenDiferenciales {
     width: 60%;
