--- a/style.css
+++ b/style.css
@@ -94,10 +94,7 @@ footer{
     margin:20px;
 }
 
-main{
-    width: 940px;
-    margin: 0 auto;    
-}
+
 
 form{
     margin: 40px 0;
@@ -157,6 +154,13 @@ td,th{
     width: 100%;
 }
 
+.principal{
+    padding: 3em;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto; 
+}
+
 .titulo-principal{
     text-align: center;
     font-size: 2em;
@@ -175,19 +179,43 @@ td,th{
 .principal em{
     font-style: italic;
 }
-.utensilios {
+.utensilios{
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
 }
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(orange, #888888,blue);
 }
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
 }
-.imagenDiferenciales {
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.items{
+    line-height: 1.5;
+}
+.items:first-child{
+    font-weight: bold;
+}
+.imagen-diferenciales{
     width: 60%;
 }
 
