--- a/style.css
+++ b/style.css
@@ -166,6 +166,8 @@ td,th{
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+    text-shadow: 2px 2px 10px red;
+
 }
 
 .principal p{
@@ -220,6 +222,12 @@ td,th{
 }
 .imagen-diferenciales{
     width: 60%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 15px black;
+
+}
+.imagen-diferenciales:hover{
+    opacity: 0.3;
 }
 
 .video{
