--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@ td,th{
     .lista-diferenciales, .imagen-diferenciales{
         width: 100%;
     }
+    .productos, .productos li{
+        width: 100%;
+        padding: ;
+    }
 }
 
 
